--- a/style.css
+++ b/style.css
@@ -95,8 +95,6 @@ body {
     width: 312px;
     height: 406px;
 
-
-
     background: #FFFFFF;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
 }
@@ -106,9 +104,21 @@ body {
 }
 
 .teachers-name {
+    font-family: Roboto Condensed;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 25px;
 
+    color: #000000;
 }
 
 .teachers-xp {
-    
+    font-family: Roboto;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+
+    color: #AFAFAF;
 }
