--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ button {
 }
 
 .register-link {
+    display: block;
     position: relative;
     
     padding: 20px 85px 21px 42px;
@@ -86,10 +87,11 @@ button {
 }
 
 .teachers {
-
+    overflow: hidden;
 }
 
 .teachers-list {
+    transition: all 300ms;
     display: flex;
     list-style: none;
 }
@@ -106,10 +108,6 @@ button {
 
     background: #FFFFFF;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-}
-
-.teachers-image {
-
 }
 
 .teachers-name {
