--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ button {
 
 .slider-title {
 
-
     font-family: Roboto Condensed;
     font-style: italic;
     font-weight: bold;
@@ -87,11 +86,15 @@ button {
 }
 
 .teachers {
+    min-width: 1440px;
+    height: 406px;
+    position: relative;
     overflow: hidden;
 }
-
 .teachers-list {
-    transition: all 300ms;
+    position: absolute;
+    left: 0px;
+    transition: all 300ms ease-in;
     display: flex;
     list-style: none;
 }
@@ -143,8 +146,12 @@ button {
 }
 
 .slider-control {
-display: flex;
-align-items: center;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    z-index: 1;
+    bottom: -20px;
+    left: calc(50% - 118px);
 }
 
 .slider-button-previous {
