--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ button {
 }
 
 .container {
-    width: 1440px;
+    max-width: 1440px;
 }
 
 .slider {
@@ -54,28 +54,23 @@ button {
 }
 
 .register-link {
+    margin-right: 73px;
+
     position: relative;
     
-    padding: 20px 85px 21px 42px;
+    padding: 20px 135px 21px 42px;
     text-decoration: none;
     background-color: #000;
     color: #fff;
 
-    z-index: 2;
+    box-sizing: border-box;
 }
 
 .register-link::before {
-    content: "";
+    content: url("img/shadow-rectangle.svg");
     position: absolute;
-    width: 214px;
-    height: 60px;
     left: 12px;
     top: 16px;
-
-    border: 1px solid #E0E0E0;
-    box-sizing: border-box;
-
-    z-index: 1;
 }
 
 .register-link::after {
